[package]
name = "ini_lib"
version = "0.1.4"
edition = "2021"
description = "一个简单解析ini的库，允许重名[Section]"
license = "MIT"
documentation = "https://docs.rs/ini_lib"
homepage = "https://github.com/Rehtt/ini_lib_rust"
repository = "https://github.com/Rehtt/ini_lib_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
